# WeldSegmentation

./: .gitignore  CMakeLists.txt  README.md  main.cpp  test.cpp
include/: heightmap.h  normal_correction.h  plane_segment.h  pre_process.h  template.h  visualization.h
src/: normal_correction.cpp  plane_segment.cpp  pre_process.cpp  visualization.cpp
